tests/NormalTests/paczka1/fuzzy1/18101750.err
Error in line 1: WuecWyZF A259 11,1
Error in line 6: oTv87A A259 3,3
Error in line 9: oTv87A A223 44,4
Error in line 16: A259 A259 82,2
Error in line 17: A259 A223 50,7
Error in line 22: WuecWyZF S339 41,7
Error in line 30: MhxHg0q A259 34,7
Error in line 32: MhxHg0q A234 29,6
Error in line 33: MhxHg0q S339 71,4
